add alert for user
Add alert for user information.To make the user know what age range is appropriate

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon web" href="image/bmi-body-mass-index-word-vector-9715651.jpg">
 </head>
 
-<body>
+<body onload="alert('This is a BMI for age 18 and up.')">
 
     <!-- background form -->
     <div id="back">
