edite html file
eddite and add p element for link to script

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
                 <input id="height" type="number" placeholder="Enter your Height...">
                 <button id="button">Calculate</button>
             </div>
-            <p id="result"></p>
         </form>
         <!-- blue default svg -->
         <div class="svgDadNon" id="SvgDad">
@@ -47,7 +46,7 @@
         <div id="overageDad">
             <div id="overageChild">
                 <img src="image/simplification.png" alt="">
-                <p id="result"></p>
+                <p id="result5"></p>
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" width="422" height="596" viewBox="0 0 422 596" fill="none">
                 <path
@@ -59,7 +58,7 @@
         <div id="normalDad">
             <div id="normalChild">
                 <img src="image/simplificationfit.png" alt="">
-                <p id="result"></p>
+                <p id="result1"></p>
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" width="424" height="596" viewBox="0 0 424 596" fill="none">
                 <path
@@ -83,8 +82,8 @@
         <!-- for tiny men -->
         <div id="tinyMen">
             <div id="tinyCMen">
-            <img src="image/simplificationmenTin.png" alt="">
-                <p id="result"></p>
+                <img src="image/simplificationmenTin.png" alt="">
+                <p id="result2"></p>
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" width="415" height="596" viewBox="0 0 415 596" fill="none">
                 <path
@@ -95,22 +94,26 @@
         <!-- for normal men -->
         <div id="normalMen">
             <div id="normalCMen">
-            <img src="image/simplificationfitmen.png" alt="">
-                <p id="result"></p>
+                <img src="image/simplificationfitmen.png" alt="">
+                <p id="result3"></p>
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" width="424" height="596" viewBox="0 0 424 596" fill="none">
-                <path d="M0 26L0 570C0 584.359 11.6406 596 26 596H364.993C379.352 596 390.993 584.359 390.993 570V380.711C390.993 375.058 392.835 369.559 396.241 365.047L418.7 335.294C425.92 325.729 425.668 312.469 418.088 303.186L396.853 277.178C393.063 272.535 390.993 266.727 390.993 260.734L390.993 26C390.993 11.6406 379.352 0 364.993 0H26C11.6406 0 0 11.6406 0 26Z" fill="#F7B078"/>
-              </svg>
+                <path
+                    d="M0 26L0 570C0 584.359 11.6406 596 26 596H364.993C379.352 596 390.993 584.359 390.993 570V380.711C390.993 375.058 392.835 369.559 396.241 365.047L418.7 335.294C425.92 325.729 425.668 312.469 418.088 303.186L396.853 277.178C393.063 272.535 390.993 266.727 390.993 260.734L390.993 26C390.993 11.6406 379.352 0 364.993 0H26C11.6406 0 0 11.6406 0 26Z"
+                    fill="#F7B078" />
+            </svg>
         </div>
         <!-- for overage men -->
         <div id="overMen">
             <div id="overCMen">
-            <img src="image/simplificationfatMen.png" alt="">
-                <p id="result"></p>
+                <img src="image/simplificationfatMen.png" alt="">
+                <p id="result4"></p>
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" width="422" height="596" viewBox="0 0 422 596" fill="none">
-                <path d="M0 26L0 570C0 584.359 11.6406 596 26 596H364.993C379.352 596 390.993 584.359 390.993 570V157.974C390.993 152.16 392.942 146.513 396.528 141.937L415.951 117.152C423.551 107.453 423.3 93.7513 415.349 84.3378L397.13 62.7659C393.167 58.074 390.993 52.1308 390.993 45.9893V26C390.993 11.6406 379.352 0 364.993 0H26C11.6406 0 0 11.6406 0 26Z" fill="#EA7953"/>
-              </svg>
+                <path
+                    d="M0 26L0 570C0 584.359 11.6406 596 26 596H364.993C379.352 596 390.993 584.359 390.993 570V157.974C390.993 152.16 392.942 146.513 396.528 141.937L415.951 117.152C423.551 107.453 423.3 93.7513 415.349 84.3378L397.13 62.7659C393.167 58.074 390.993 52.1308 390.993 45.9893V26C390.993 11.6406 379.352 0 364.993 0H26C11.6406 0 0 11.6406 0 26Z"
+                    fill="#EA7953" />
+            </svg>
         </div>
 
         <!-- progress bar -->
